# miniDeskKit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.bat  run_miniDeskKit.vbs
crawled_docs/zh_CN/: index.html  index.json
crawled_docs/zh_CN/_images/: studio_home.json  studio_project.json  studio_run.json
crawled_docs/zh_CN/_modules/: agentscope.html  agentscope.json
crawled_docs/zh_CN/_sources/: index.rst.json  index.rst.txt
crawled_docs/zh_CN/api/: agentscope.agent.html  agentscope.agent.json  agentscope.embedding.html  agentscope.embedding.json  agentscope.evaluate.html  agentscope.evaluate.json  agentscope.exception.html  agentscope.exception.json  agentscope.formatter.html  agentscope.formatter.json  agentscope.html  agentscope.json  agentscope.mcp.html  agentscope.mcp.json  agentscope.memory.html  agentscope.memory.json  agentscope.message.html  agentscope.message.json  agentscope.model.html  (+17 more)
src/: base_widget.py  main.py  settings_dialog.py  test.py
src/github_trending/: trending_service.py  trending_widget.py  trending_worker.py
src/music/: music_detail_widget.py  music_player_widget.py
src/public/: card_widget copy.py  card_widget.py
src/system_monitor/: __init__.py  progress_bars.py  status_widgets.py  style_manager.py  system_info_worker.py  system_monitor_widget.py
src/utils/: config_manager.py  env_loader.py  logger.py  openai_llm.py  utils.py
src/weather/: __init__.py  precip_emojis_widget.py  precip_widget.py  precip_worker.py
src/web_crawl/: web_crawler.py
src/web_crawler/: __init__.py  crawler.py  utils.py
(+380 files in other folders)
