[project]
name = "minideskkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pyinstaller>=6.16.0",
    "pyside6>=6.9.3",
    "pywin32>=311",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "wmi>=1.5.1",
]
