[project]
name = "minideskkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentscope>=1.0.4",
    "beautifulsoup4>=4.14.2",
    "crawl4ai>=0.7.4",
    "feedparser>=6.0.12",
    "markitdown[pptx]>=0.1.3",
    "openai-whisper>=20250625",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "psutil>=7.1.0",
    "pydantic-ai>=1.0.13",
    "pyinstaller>=6.16.0",
    "pyside6>=6.9.3",
    "pywin32>=311",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "wmi>=1.5.1",
    "yt-dlp>=2025.9.26",
]
